@@ -56,7 +56,7 @@ $TCA['tt_content']['types']['list']['subtypes_excludelist'][$_EXTKEY.'_pi1']='la
 t3lib_extMgm::addPlugin(Array('LLL:EXT:x4euniprojectsgeneral/locallang_db.php:tt_content.list_type_pi1', $_EXTKEY.'_pi1'),'list_type');
 
 
-t3lib_extMgm::addStaticFile($_EXTKEY,'pi1/static/','Project administrator');
+t3lib_extMgm::addStaticFile($_EXTKEY,'pi1/static/','4eyes - Project database');
 
 
 // flexform stuff
