@@ -1,0 +1,7 @@
+projectDB {
+	# sysfolder containaing the projects
+	pidList =
+}
+
+# see also x4epersdb/ext_typoscript_constants for additional, persDB related
+# constants
