@@ -1,36 +1,0 @@
-<h1>###projecttitle###</h1>
-<div>
-	<div>
-		<div class="bodytext" style="float:right;text-align:left; margin-left:200px;padding:10px 20px 0px 0px;width:180px">
-			###picture###&nbsp;	
-		</div>
-		<div style="width:250px">
-			<h2>Projektleitung</h2>
-			<p class="bodytext">
-				###projectmanagement######externalprojectmanagement###
-			</p>
-			<h2>Mitarbeiter</h2>
-			<p class="bodytext">###personsinvolved######externalpersonsinvolved###</p>
-	
-			<h2>Zeitraum</h2>
-			<p class="bodytext">
-			Beginn: ###start###<br />
-			Ende: ###end###
-			</p>
-		</div>
-	</div>
-	<div>
-		###link1###
-	
-		<h2>Beschreibung</h2>
-		<p class="bodytext">###description###</p>
-		
-		<h2>Methodologie</h2>
-		<p class="bodytext">###methodology###</p>
-		
-		<h2>Kommentar</h2>
-		<p class="bodytext">###comment###</p>
-		
-		<p class="bodytext">###back###</p>
-	</div>
-</div>
