@@ -1,45 +1,0 @@
-<!-- ###singleView### -->
-<!-- ###projecttitleBox### --><h1>Forschungsprojekte</h1>
-<h1 class="projecttitle">###projecttitle###</h1><!-- ###projecttitleBox### -->
-<div>
-	<div>
-		<!-- ###pictureBox### -->
-		<div class="bodytext">
-			###picture###
-		</div>
-		<!-- ###pictureBox### -->
-		<div>
-			<h2>Forschungsleitung</h2>
-			<p class="bodytext"><!-- ###projectmanagementBox### -->###projectmanagement###<!-- ###projectmanagementBox### --><!-- ###externalprojectmanagementBox### -->###externalprojectmanagement###<!-- ###externalprojectmanagementBox### --></p>
-
-			<h2>Forschungsteam</h2>
-			<p class="bodytext"><!-- ###personsinvolvedBox#### -->###personsinvolved###<!-- ###personsinvolvedBox#### --><!-- ###externalpersonsinvolvedBox### -->###externalpersonsinvolved###<!-- ###externalpersonsinvolvedBox### --></p>
-
-			<h2>Zusammenarbeit mit</h2>
-			<!-- ###financingBox### --><p class="bodytext">###financing###</p><!-- ###financingBox### -->
-			<!-- ###collaborationBox### --><p class="bodytext">###collaboration###</p><!-- ###collaborationBox### -->
-
-
-			<h2>Zeitraum</h2>
-			<p class="bodytext">
-			<!-- ###startBox### -->Beginn: ###start###<br /><!-- ###startBox### -->
-			Ende: <!-- ###endBox### -->###end###<!-- ###endBox### -->
-			</p>
-		</div>
-	</div>
-	<div>
-		<!-- ###link1Box### -->###link1###<!-- ###link1Box### -->
-		<!-- ###descriptionBox### -->
-		<h2>Projektbeschreibung</h2>
-		<p class="bodytext">###description###</p>
-		<!-- ###descriptionBox### -->
-
-		<!-- ###commentBox### -->
-		<h2>Kommentar</h2>
-		<p class="bodytext">###comment###</p>
-		<!-- ###commentBox### -->
-
-		<p class="bodytext"><a href="###backLink###">Zurück</a></p>
-	</div>
-</div>
-<!-- ###singleView### -->
