@@ -1,3 +1,9 @@
+2010-08-30 Markus Stauffiger <markus-at-4eyes.ch>
+    * Added manual.swx
+	* Updated typoscript files
+	* Removed some unnecessary files
+	* A little code clean up
+
 2010-08-29 Markus Stauffiger <markus-at-4eyes.ch>
     * Removed deactivated code
 	* Added phpdoc documentation
